fix(maida): move TRACE left of theme toggle, right-align kamae desc text

--- a/src/views/KamaeView.css
+++ b/src/views/KamaeView.css
@@ -73,6 +73,7 @@
     padding-right: 3rem;
     line-height: 1.4;
     margin-left: auto;
+    text-align: right;
 }
 
 @media (max-height: 800px) {
